[package]
name = "apollo-client"
version = "0.7.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
description = "Rust🦀 client for Ctrip Apollo."
repository = "https://github.com/jmjoy/apollo-client"
documentation = "https://docs.rs/apollo-client"
license = "Unlicense"
readme = "README.md"
keywords = ["ctrip", "apollo", "client"]
exclude = [
    "sql",
    "docker-compose.yml",
    "test-coverage.sh",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["conf", "host"]
conf = ["async-stream", "rust-ini"]
host-ip = ["systemstat", "cidr-utils"]
host-name = ["hostname"]
host = ["host-ip", "host-name"]
open = ["chrono/serde"]
full = ["open"]

[dependencies]
async-stream = { version = "0.3.2", optional = true }
async-trait = "0.1.50"
cfg-if = "1.0.0"
chrono = { version = "0.4.19", optional = true }
cidr-utils = { version = "0.5.4", optional = true }
form_urlencoded = "1.0.1"
futures-core = "0.3.15"
futures-util = "0.3.15"
hostname = { version = "0.3.1", optional = true }
http = "0.2.4"
log = "0.4.14"
once_cell = "1.8.0"
reqwest = { version = "0.11.4", features = ["cookies", "json"] }
rust-ini = { version = "0.17.0", optional = true }
serde = "1.0.126"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
systemstat = { version = "0.1.8", optional = true }
thiserror = "1.0.25"
url = "2.2.2"

[dev-dependencies]
env_logger = "0.8.4"
futures = { version = "0.3.15", features = ["alloc"] }
tokio = { version = "1.7.1", features = ["full"] }

[[test]]
name = "conf"
required-features = ["conf"]

[[test]]
name = "open"
required-features = ["open"]

[[example]]
name = "basic"
required-features = ["conf"]

[[example]]
name = "watch"
required-features = ["conf"]

[[example]]
name = "app"
required-features = ["open"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
