[package]
name = "apollo-client"
version = "0.8.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2021"
rust-version = "1.56"
description = "Ctrip Apollo client for Rust🦀."
repository = "https://github.com/jmjoy/apollo-client"
documentation = "https://docs.rs/apollo-client"
license = "Unlicense"
readme = "README.md"
keywords = ["ctrip", "apollo", "client"]
exclude = ["sql", "docker-compose.yml", "test-coverage.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["conf", "default-tls"]
default-tls = ["reqwest/default-tls"]
conf = ["async-stream", "rust-ini", "host"]
host = ["host-ip", "host-name"]
host-ip = ["systemstat", "cidr-utils"]
host-name = ["hostname"]
open = ["chrono/serde"]
full = ["open"]
auth = ["chrono", "hmac", "sha1", "base64", "urlencoding"]

[dependencies]
async-stream = { version = "0.3.5", optional = true }
async-trait = "0.1.80"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", optional = true }
cidr-utils = { version = "0.6.1", optional = true }
form_urlencoded = "1.2.1"
futures-core = "0.3.30"
futures-util = "0.3.30"
hostname = { version = "0.4.0", optional = true }
http = "1.1.0"
log = "0.4.18"
once_cell = "1.17.2"
reqwest = { version = "0.12.5", features = [
    "cookies",
    "json",
], default-features = false }
rust-ini = { version = "0.21.0", optional = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
systemstat = { version = "0.2.3", optional = true }
thiserror = "1.0.61"
url = "2.5.2"
hmac = { version = "0.12.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
base64 = { version = "0.22.1", optional = true }
urlencoding = { version = "2.1.3", optional = true }

[dev-dependencies]
env_logger = "0.11.3"
futures = { version = "0.3.30", features = ["alloc"] }
tokio = { version = "1.29.1", features = ["full"] }

[[test]]
name = "conf"
required-features = ["conf"]

[[test]]
name = "open"
required-features = ["open"]

[[example]]
name = "basic"
required-features = ["conf"]

[[example]]
name = "auth"
required-features = ["conf", "auth"]

[[example]]
name = "watch"
required-features = ["conf"]

[[example]]
name = "app"
required-features = ["open"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
