[package]
name = "standalone-apollo-client"
version = "0.1.0"
authors = ["__JM_Joy__ <918734043@qq.com>"]
edition = "2018"
description = "Executable standalone rust🦀 client for Apollo, mainly for stateless services like php-fpm."
repository = "https://github.com/jmjoy/apollo-client"
documentation = "https://docs.rs/apollo-client"
license-file = "../LICENSE"
readme = "README.md"
keywords = ["apollo", "client", "standalone", "php"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-client = { version = "0.2.0", "path" = "..", features = ["full"] }
structopt = "0.3.7"
